# applying-tda

./: .gitignore  README.md  mapper.ipynb
src/: generate_datasets.py  giotto-tda.py  kmapper.ipynb  mapper.ipynb  mapper.py  mymapper.py  ott_test.py  prep.py  pyproject.toml  test-tda-mapper.ipynb
